--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <link rel="shortcut icon" href="./resources/Group-1000002740.ico" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./resources/Group-1000002740.ico"
+      type="image/x-icon"
+    />
     <!-- link bootsrap css -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -30,24 +34,24 @@
 
       /* width */
       ::-webkit-scrollbar {
-        width: 7px;
+        width: 6px;
       }
 
       /* Track */
       ::-webkit-scrollbar-track {
-        box-shadow: inset 0 0 10px rgb(243, 217, 217); 
+        box-shadow: inset 0 0 8px rgb(243, 217, 217);
         border-radius: 4px;
       }
-      
+
       /* Handle */
       ::-webkit-scrollbar-thumb {
-        background: #f94a3d; 
+        background: #f94a3d;
         border-radius: 5px;
       }
 
       /* Handle on hover */
       ::-webkit-scrollbar-thumb:hover {
-        background: red;  
+        background: red;
       }
     </style>
 
@@ -295,7 +299,9 @@
 
     <!-- ---------------------- OUR SPECIAL RECIPES SECTION------------------------ -->
     <h1 class="text-center text-bold py-4">Try Our Special Recipes</h1>
-    <section class="d-flex flex-column align-items-center our-recipes vw-100 py-3 mb-4">
+    <section
+      class="d-flex flex-column align-items-center our-recipes vw-100 py-3 mb-4"
+    >
       <!-- LINKS -->
       <ul class="d-flex list-unstyled">
         <li>
@@ -317,8 +323,12 @@
           <img src="./resources/menuitem1.png" alt="card-img" />
           <img src="./resources/stars.png" alt="5-stars" />
           <h3>Crispy fried Chicken</h3>
-          <h4> Price <span class="text-danger font-weight-bold">$ 13.00 </span></h4>
-          <button type="button" class="btn btn-outline-danger px-4">Add to Cart+</button>
+          <h4>
+            Price <span class="text-danger font-weight-bold">$ 13.00 </span>
+          </h4>
+          <button type="button" class="btn btn-outline-danger px-4">
+            Add to Cart+
+          </button>
         </div>
 
         <!-- menu-item 2 -->
@@ -328,30 +338,42 @@
           <img src="./resources/menuitem2.png" alt="card-img" />
           <img src="./resources/stars.png" alt="5-stars" />
           <h3>Burger Patty Recipe</h3>
-          <h4> Price <span class="text-danger font-weight-bold">$ 15.00 </span></h4>
-          <button type="button" class="btn btn-outline-danger px-4">Add to Cart+</button>
+          <h4>
+            Price <span class="text-danger font-weight-bold">$ 15.00 </span>
+          </h4>
+          <button type="button" class="btn btn-outline-danger px-4">
+            Add to Cart+
+          </button>
         </div>
 
         <!-- menu-item 3 -->
         <div
-        class="menu-item d-flex flex-column align-items-center justify-content-around p-3 m-2 mx-4"
+          class="menu-item d-flex flex-column align-items-center justify-content-around p-3 m-2 mx-4"
         >
-        <img src="./resources/menuitem3.png" alt="card-img" />
-        <img src="./resources/stars.png" alt="5-stars" />
-        <h3>Must Try Dishes</h3>
-        <h4> Price <span class="text-danger font-weight-bold">$ 12.00 </span></h4>
-        <button type="button" class="btn btn-outline-danger px-4">Add to Cart+</button>
+          <img src="./resources/menuitem3.png" alt="card-img" />
+          <img src="./resources/stars.png" alt="5-stars" />
+          <h3>Must Try Dishes</h3>
+          <h4>
+            Price <span class="text-danger font-weight-bold">$ 12.00 </span>
+          </h4>
+          <button type="button" class="btn btn-outline-danger px-4">
+            Add to Cart+
+          </button>
         </div>
 
         <!-- menu-item 4 -->
         <div
-        class="menu-item d-flex flex-column align-items-center justify-content-around p-3 m-2 mx-4"
+          class="menu-item d-flex flex-column align-items-center justify-content-around p-3 m-2 mx-4"
         >
-        <img src="./resources/menuitem4.png" alt="card-img" />
-        <img src="./resources/stars.png" alt="5-stars" />
-        <h3>Tasty French Fries</h3>
-        <h4> Price <span class="text-danger font-weight-bold">$ 17.00 </span></h4>
-        <button type="button" class="btn btn-outline-danger px-4">Add to Cart+</button>
+          <img src="./resources/menuitem4.png" alt="card-img" />
+          <img src="./resources/stars.png" alt="5-stars" />
+          <h3>Tasty French Fries</h3>
+          <h4>
+            Price <span class="text-danger font-weight-bold">$ 17.00 </span>
+          </h4>
+          <button type="button" class="btn btn-outline-danger px-4">
+            Add to Cart+
+          </button>
         </div>
 
         <!-- menu-item 1 -->
@@ -361,8 +383,12 @@
           <img src="./resources/menuitem1.png" alt="card-img" />
           <img src="./resources/stars.png" alt="5-stars" />
           <h3>Crispy fried Chicken</h3>
-          <h4> Price <span class="text-danger font-weight-bold">$ 13.00 </span></h4>
-          <button type="button" class="btn btn-outline-danger px-4">Add to Cart+</button>
+          <h4>
+            Price <span class="text-danger font-weight-bold">$ 13.00 </span>
+          </h4>
+          <button type="button" class="btn btn-outline-danger px-4">
+            Add to Cart+
+          </button>
         </div>
 
         <!-- menu-item 2 -->
@@ -372,68 +398,184 @@
           <img src="./resources/menuitem2.png" alt="card-img" />
           <img src="./resources/stars.png" alt="5-stars" />
           <h3>Burger Patty Recipe</h3>
-          <h4> Price <span class="text-danger font-weight-bold">$ 15.00 </span></h4>
-          <button type="button" class="btn btn-outline-danger px-4">Add to Cart+</button>
+          <h4>
+            Price <span class="text-danger font-weight-bold">$ 15.00 </span>
+          </h4>
+          <button type="button" class="btn btn-outline-danger px-4">
+            Add to Cart+
+          </button>
         </div>
 
         <!-- menu-item 3 -->
         <div
-        class="menu-item d-flex flex-column align-items-center justify-content-around p-3 m-2 mx-4"
+          class="menu-item d-flex flex-column align-items-center justify-content-around p-3 m-2 mx-4"
         >
-        <img src="./resources/menuitem3.png" alt="card-img" />
-        <img src="./resources/stars.png" alt="5-stars" />
-        <h3>Must Try Dishes</h3>
-        <h4> Price <span class="text-danger font-weight-bold">$ 12.00 </span></h4>
-        <button type="button" class="btn btn-outline-danger px-4">Add to Cart+</button>
+          <img src="./resources/menuitem3.png" alt="card-img" />
+          <img src="./resources/stars.png" alt="5-stars" />
+          <h3>Must Try Dishes</h3>
+          <h4>
+            Price <span class="text-danger font-weight-bold">$ 12.00 </span>
+          </h4>
+          <button type="button" class="btn btn-outline-danger px-4">
+            Add to Cart+
+          </button>
         </div>
 
         <!-- menu-item 4 -->
         <div
-        class="menu-item d-flex flex-column align-items-center justify-content-around p-3 m-2 mx-4"
+          class="menu-item d-flex flex-column align-items-center justify-content-around p-3 m-2 mx-4"
         >
-        <img src="./resources/menuitem4.png" alt="card-img" />
-        <img src="./resources/stars.png" alt="5-stars" />
-        <h3>Tasty French Fries</h3>
-        <h4> Price <span class="text-danger font-weight-bold">$ 17.00 </span></h4>
-        <button type="button" class="btn btn-outline-danger px-4">Add to Cart+</button>
+          <img src="./resources/menuitem4.png" alt="card-img" />
+          <img src="./resources/stars.png" alt="5-stars" />
+          <h3>Tasty French Fries</h3>
+          <h4>
+            Price <span class="text-danger font-weight-bold">$ 17.00 </span>
+          </h4>
+          <button type="button" class="btn btn-outline-danger px-4">
+            Add to Cart+
+          </button>
         </div>
-
       </div>
     </section>
 
     <!-- -------------------CUSTOMER FEEDBACK--------------------------- -->
-    <section class="cust-feedback my-2 d-flex justify-content-between align-items-center p-5 vw-100 ">
-      <div class="cust-list p-3 m-2 d-flex flex-column align-items-center justify-content-center col-5 ">
-
-          <div class="customer bg-white px-1">
-            <div class="grid-item-image m-2 ms-3 "><img src="./resources/Ellipse 2518.png" alt="profile_pic" class="cust-pic"></div>
-            <div class="grid-item pt-4"><h4>Rosele Desoza</h4></div>
-            <div class="grid-item p-1">Marketting Cordinator</div>
+    <section
+      class="cust-feedback my-5 d-flex justify-content-between align-items-center p-5 vw-100"
+    >
+      <div
+        class="cust-list p-3 m-2 d-flex flex-column align-items-center justify-content-center col-5"
+      >
+        <div class="customer bg-white px-1">
+          <div class="grid-item-image m-2 ms-3">
+            <img
+              src="./resources/Ellipse 2518.png"
+              alt="profile_pic"
+              class="cust-pic"
+            />
           </div>
+          <div class="grid-item pt-4"><h4>Rosele Desoza</h4></div>
+          <div class="grid-item p-1">Marketting Cordinator</div>
+        </div>
 
-          <div class="customer bg-white px-1 my-1">
-            <div class="grid-item-image m-2 ms-3 "><img src="./resources/Ellipse 2518 (3).png" alt="profile_pic" class="cust-pic"></div>
-            <div class="grid-item pt-4"><h4>Marvin McKinney</h4></div>
-            <div class="grid-item p-1">Web Designer</div>
+        <div class="customer bg-white px-1 my-1">
+          <div class="grid-item-image m-2 ms-3">
+            <img
+              src="./resources/Ellipse 2518 (3).png"
+              alt="profile_pic"
+              class="cust-pic"
+            />
           </div>
+          <div class="grid-item pt-4"><h4>Marvin McKinney</h4></div>
+          <div class="grid-item p-1">Web Designer</div>
+        </div>
 
-          <div class="customer bg-white px-1 my-1">
-            <div class="grid-item-image m-2 ms-3 "><img src="./resources/Ellipse 2518 (1).png" alt="profile_pic" class="cust-pic"></div>
-            <div class="grid-item pt-4"><h4>Guy Hawkins</h4></div>
-            <div class="grid-item p-1">President of Sales </div>
+        <div class="customer bg-white px-1 my-1">
+          <div class="grid-item-image m-2 ms-3">
+            <img
+              src="./resources/Ellipse 2518 (1).png"
+              alt="profile_pic"
+              class="cust-pic"
+            />
           </div>
+          <div class="grid-item pt-4"><h4>Guy Hawkins</h4></div>
+          <div class="grid-item p-1">President of Sales</div>
+        </div>
 
-          <div class="customer bg-white px-1 my-1">
-            <div class="grid-item-image m-2 ms-3 "><img src="./resources/Ellipse 2518 (2).png" alt="profile_pic" class="cust-pic"></div>
-            <div class="grid-item pt-4"><h4>Kathryn Murphy</h4></div>
-            <div class="grid-item p-1">Marketing Co-ordinator</div>
+        <div class="customer bg-white px-1 my-1">
+          <div class="grid-item-image m-2 ms-3">
+            <img
+              src="./resources/Ellipse 2518 (2).png"
+              alt="profile_pic"
+              class="cust-pic"
+            />
           </div>
-
+          <div class="grid-item pt-4"><h4>Kathryn Murphy</h4></div>
+          <div class="grid-item p-1">Marketing Co-ordinator</div>
+        </div>
       </div>
 
-      <div class="cust-article d-flex flex-column justify-content-center m-2 p-3 col-7 ">
-        <h1>What our Customers <br><span class="text-danger">are saying</span></h1>
+      <div
+        class="cust-article d-flex flex-column justify-content-center m-2 p-3 px-5 col-7"
+      >
+        <h1 class="mb-3">
+          What our Customers <br /><span class="text-danger">are saying</span>
+        </h1>
+        <div
+          class="d-flex justify-content-between align-items-center pe-3 my-5"
+        >
+          <div class="details ps-2">
+            <h5>Rosele Desoza</h5>
+            <div>Marketting Co-ordinator</div>
+          </div>
+          <img src="./resources/stars.png" alt="5-stars" />
+        </div>
+        <p>
+          “Having good restaurant reviews is crucial these days. It is not just
+          making our decision to pick one easier, it is also helping the
+          restaurant be more successful. You can quickly copy and paste these
+          good restaurant review examples, publish them on Facebook”
+        </p>
       </div>
     </section>
+
+    <section
+      class="app-link-section d-flex align-items-center justify-content-center p-2"
+    >
+      <div class="w-50 d-flex justify-content-end align-items-center">
+        <img
+          src="./resources/Group 1000002779.png"
+          alt="MobileCircles"
+          class="mobile-circles"
+        />
+      </div>
+
+      <div
+        class="text-white app-link-article d-flex flex-column align-items-center justify-content-start p-2"
+      >
+        <h1 class="my-4">
+          Never Feel Hungry! Download Our Mobile App Order Delicious Food
+        </h1>
+        <h5 class="mb-4">
+          Online ordering has enabled many restaurants to manage their peak
+          business hours very effectively.
+        </h5>
+        <div class="Link_imgs">
+          <a
+            href="https://apps.apple.com/in/app/swiggy-food-grocery-delivery/id989540920"
+            target="_blank"
+          >
+            <img src="./resources/button-App store.png" alt="apps-store" />
+          </a>
+          <a
+            href="https://play.google.com/store/apps/details?id=in.swiggy.android&hl=en&gl=US"
+            target="_blank"
+          >
+            <img src="./resources/button-Play store.png" alt="play-store" />
+          </a>
+        </div>
+      </div>
+    </section>
+    <!-- FOOTER -->
+    <footer class="d-flex align-items-center justify-content-around py-5 px-3">
+      <div
+        class="footer-part1 d-flex flex-column align-items-center justify-content-around"
+      >
+        <!-- LOGO -->
+        <div class="my-dlogo p-1">
+          <h1 class="text-light bg-danger d-inline-block px-2 mx-1 my-2">D</h1>
+          <h1 class="text-danger d-inline-block">Fdelivery</h1>
+        </div>
+        <p>
+          Retail food delivery is a courier service in which a restaurant,
+          store, or independent food-delivery
+        </p>
+        <div class="socials">
+          <div class="p-2">
+            <i class="fa-brands fa-facebook fa-xl"></i>
+          </div>
+          
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
